update text and clean up

--- a/nmf_approach.ipynb
+++ b/nmf_approach.ipynb
@@ -33,12 +33,16 @@
     "\n",
     "##### Approach\n",
     "\n",
-    "The project will happen in multiple stages consisting of 1) preprocess the text, 2) create a document-term matrix using tf-idf 3) create the NMF model using the doc-term matrix  4) select the optimal number of topics using word2vec and calculate topic coherence 5) based on the optimal k topics print out top terms, documents and compare to original labels for accuracy."
+    "The project will happen in multiple stages consisting of 1) preprocess the text, 2) create a document-term matrix using tf-idf 3) create the NMF model using the doc-term matrix  4) select the optimal number of topics using word2vec and calculate topic coherence 5) based on the optimal k topics print out top terms, documents and compare to original labels for accuracy.\n",
+    "\n",
+    "references/inspiration:<br>\n",
+    "-Benedek Rozemberczaki's boosted factorization: https://github.com/benedekrozemberczki/BoostedFactorization <br>\n",
+    "-Derek Greene's excellent github & papers: https://github.com/derekgreene "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "scrolled": false
    },
@@ -183,9 +187,17 @@
     }
    ],
    "source": [
+    "#load the data and look at the structure\n",
     "data = pd.read_json('data/' + [x for x in os.listdir('data/') if x.endswith('.json')][0], lines=True)\n",
     "\n",
     "basic_info.data_info(data,None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Let's look at the distribution headlines by hand-labeled type"
    ]
   },
   {
@@ -231,7 +243,7 @@
     "\n",
     "TF-IDF gives more weight to important tokens in the text, and consists of two parts; term frequency (TF) and inverse document frequency (IDF). TF refers to the number of times a term appears in a single document whereas IDF refers to the total number of documents that contain that term. IDF seeks to penalizes terms that appear too commonly throughout all the documents. \n",
     "\n",
-    "In the preprocessing code below I've set max_df in the tf_idf parameter to 0.95. This means ignore documents that appear in more than 95% of the documents. While I set min_df to 20, which means ignore terms that appear in less than 20 documents. This appeared to have the"
+    "In the preprocessing code below I've set max_df in the tf_idf parameter to 0.95. This means ignore documents that appear in more than 95% of the documents. While I set min_df to 20, which means ignore terms that appear in less than 20 documents. This appeared to create the most accurate topic models as you will see below."
    ]
   },
   {
@@ -323,6 +335,13 @@
     "for x,y,z in [(i+1,p[0],p[1]) for i,p in enumerate(ranked_tokens[0:20])]:\n",
     "    print(x,y,z)\n",
     "print('='*50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Use the bokeh library with SVD to visualize the corpus in two dimensions"
    ]
   },
   {
@@ -758,7 +777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Create topic models"
+    "### Create topic models"
    ]
   },
   {
@@ -769,12 +788,12 @@
     "\n",
     "The document-term matrix calculated with tf-idf can be decomposed into two smaller matrices W & H using a technique called Non-Negative Matrix Factorization. The W matrix dimensions are n x k which translates to documents x topics. The H matrix consists of the dimensions k x m which is equivalent to topics x terms. \n",
     "\n",
-    "In our case we have 200k+ documents (headlines) and 66k+ terms. Because this is an unsupervised model we will look for the value of k (topics) with the highest coherence. Otherwise stated we will look for terms that best represent a topic (mean coherence).\n",
+    "In our case we have 200k+ documents (headlines) and 66k+ terms. Because this is an unsupervised model we will look for the value of k (topics) with the highest mean coherence. Coherence can be otherwise stated as the terms that best represent the desired topic.\n",
     "\n",
-    "Using the example of k=4 (4 topics): <br>\n",
+    "For example with k=4 (4 topics): <br>\n",
     "\n",
-    "W matrix dimensions will be: 220853 x 4 (n x k / headlines x topics) <br>\n",
-    "H matrix dimensions will be: 4 x 6609 (k x m / topics x terms) <br>\n",
+    "W matrix dimensions will be: 220853 x 4 ( n x k --> headlines x topics ) <br>\n",
+    "H matrix dimensions will be: 4 x 6609 ( k x m --> topics x terms ) <br>\n",
     "\n",
     "##### Parameters:\n",
     "\n",
@@ -783,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +826,7 @@
     "    d = {}\n",
     "    for k in range(kmin,kmax+1):\n",
     "        model = NMF(init='nndsvd', n_components=k) \n",
-    "        d[k] = model.fit_transform(df_), model.components_ #W & H\n",
+    "        d[k] = model.fit_transform(df_), model.components_ #collect W & H factors\n",
     "    \n",
     "    print('dumping file to pkl...')\n",
     "    output = open('./data/nmf-output.pkl', 'wb')\n",
@@ -823,6 +842,14 @@
     "    pkl_file.close()\n",
     "    \n",
     "    print('loaded...')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Construct the word embedding model using word2vec\n",
+    "\n"
    ]
   },
   {
