--- a/nmf_approach.ipynb
+++ b/nmf_approach.ipynb
@@ -849,6 +849,7 @@
    "metadata": {},
    "source": [
     "##### Construct the word embedding model using word2vec\n",
+    "\n",
     "\n"
    ]
   },
@@ -883,6 +884,13 @@
     "    print('file exists...')\n",
     "    w2v_m = gensim.models.Word2Vec.load('./data/w2v-model.bin')\n",
     "    print(f'word2vec model has {len(w2v_m.wv.vocab)} terms')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Gather the coherence scores for each k "
    ]
   },
   {
@@ -1236,16 +1244,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Conclusion\n",
+    "##### Discussion\n",
+    "\n",
+    "Our model found 9 topics to be optimal. Our original dataset contained 40 hand-labeled topics in total, but I felt it better to constrain the topics to a more sensiable amount. Also many of the hand-labelled topics seem to overlap and may have be specific to the huffington post. Since unsupervised learning is highly interpretable I felt that it was best to for me to compare the results for the top 15 documents/terms for each delievered topic. In reality this technique would be used without pre-labeled data, so I might choose a value from the list provide in the top terms. Immediately topic 1 which I have labelled as politics jumps out at me as being modeled the best. As you can see from the top terms and documents it did quite well at spotting political terms. Another topic model, topic 7 seems to deal with love, wedding etc.. There is some overlap with wellness because the word love goes with phrases such as 'love your body'. In any regard there are some interesting clusters that developed in this model. There were some duplications in the clustering such as wellness, food & drink, and p\n",
+    "\n",
+    "##### Conclusion and future work\n",
+    "\n",
+    "There are a number of steps to take from here. It would be interesting to see how this model would perform on a new un-labeled dataset from either another news headline dataset. Another interesting path would be to compare a probablistic model like LDA vs. this NMF model. Also it would be interesting to run the article text through this processor and compare it against the headline output. \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
