--- a/nmf_approach.ipynb
+++ b/nmf_approach.ipynb
@@ -1252,7 +1252,9 @@
    "source": [
     "##### Method #2: LDA\n",
     "\n",
-    "Please see the following link for the kaggle notebook with the LDA model that will be used for comparison. This model was trained on kaggle to utlitize the GPUs because LDA is computationally expensive to run on a local computer. After the "
+    "We will now use Latent Dirichlet Allocation with the topic number we derived above to compare results. The ouput will be in a link below for comparison.\n",
+    "\n",
+    "To start we use a bag of words models with the same max/min df parameters for TFIDF above. "
    ]
   },
   {
@@ -1439,6 +1441,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Results\n",
+    "\n",
+    "NMF did a better job grouping political groups together. In the LDA model, groups 4,6 and 9 seem to cluster political terms around the terms Clinton, Obama, or Trump.\n",
+    "\n",
+    "Topic 7 - which we will call the \"love\" topic seems to cluster on terms like \"divorce\", \"marraige\", or \"sex\", but throws in terms like \"nation\" and \"campaign\". Perhaps alot of the discourse in today's news incorporates these topics somehow. \n",
+    "\n",
+    "Topics 1 & 3 seem to cluster on a theme of parents/kids/mothers. \n",
+    "\n",
+    "Topic 8 - no idea what the central theme is here..."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -1453,6 +1470,7 @@
     }
    ],
    "source": [
+    "#dump to a pickle file\n",
     "pldavis_d = panel.to_dict\n",
     "\n",
     "print('dumping file to pkl...')\n",
@@ -1464,11 +1482,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dump html\n",
     "pyLDAvis.save_html(panel, 'lda.html')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Please see the link below for html version of the LDA output:\n",
+    "\n",
+    "https://htmlpreview.github.io/?https://github.com/cullinap/unsupervised-cap/blob/master/lda.html\n"
    ]
   },
   {
@@ -1477,11 +1505,13 @@
    "source": [
     "##### Discussion\n",
     "\n",
-    "Our model found 9 topics to be optimal. Our original dataset contained 40 hand-labeled topics in total, but I felt it better to constrain the topics to a more sensiable amount. Also many of the hand-labelled topics seem to overlap and may have be specific to the huffington post. Since unsupervised learning is highly interpretable I felt that it was best to for me to compare the results for the top 15 documents/terms for each delievered topic. In reality this technique would be used without pre-labeled data, so I might choose a value from the list provide in the top terms. Immediately topic 1 which I have labelled as politics jumps out at me as being modeled the best. As you can see from the top terms and documents it did quite well at spotting political terms. Another topic model, topic 7 seems to deal with love, wedding etc.. There is some overlap with wellness because the word love goes with phrases such as 'love your body'. In any regard there are some interesting clusters that developed in this model. There were some duplications in the clustering such as wellness, food & drink, and parenting. If you look at the topics that the model outputted you can see that there may be a distinction between some of these overlaps though. \n",
+    "Our model found 9 topics to be optimal. Our original dataset contained 40 hand-labeled topics in total, but I felt it better to constrain the topics to a more sensiable amount. Also many of the hand-labelled topics seem to overlap and may have be specific to the huffington post. Since unsupervised learning is highly interpretable I felt that it was best to for me to compare the results for the top 15 documents/terms for each delievered topic. In reality this technique would be used without pre-labeled data, so I might choose a value from the list provide in the top terms. Immediately topic 1 which I have labelled as politics jumps out at me as being modeled the best. As you can see from the top terms and documents it did quite well at spotting political terms. Another topic model, topic 7 seems to deal with love, wedding etc.. There is some overlap with wellness because the word love goes with phrases such as 'love your body'. In any regard there are some interesting clusters that developed in this model. There were some duplications in the clustering such as wellness, food & drink, and parenting. If you look at the topics that the model outputted you can see that there may be a distinction between some of these overlaps though.\n",
+    "\n",
+    "To compare the clusters we then ran LDA on our topic headlines and compared the results vs. our NMF model. LDA was more discrimint when it came to splitting political terms, and it appears they fell into three broad categories. It clustered a general, what we will call \"love\", category. The rest of the clusters do not appear to provide anything meaningful. \n",
     "\n",
     "##### Conclusion and future work\n",
     "\n",
-    "There are a number of steps to take from here. It would be interesting to see how this model would perform on a new un-labeled dataset from either another news headline dataset. Another interesting path would be to compare a probablistic model like LDA vs. this NMF model. Also it would be interesting to run the article text through this processor and compare it against the headline output. "
+    "There are a number of steps to take from here. In this construction of these models I played with the parameters a bit to output the best result. I would like to build a pipeline with multiple features sets like tfidf which varying max and min dfs. Additionally it would be interesting to see what the result of bi-grams and tri-grams would provide. Would it provide greater clustering and more insight? "
    ]
   },
   {
